# Object-Detection-Finetuning

./: .gitignore  01_Inspect_Original_Model.ipynb  02_Build_Model_And_Test.ipynb  03_Train_Model_Head.ipynb  04_Train_Unfrozen_Model.ipynb  05_Inference.ipynb  README.md  _init__.py  pyproject.toml
helper/: __init__.py  utils.py
