[project]
name = "object-detection-transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchmetrics[detection]>=1.9.0",
    "torchvision>=0.25.0",
    "wandb>=0.27.1",
    "weave>=0.52.42",
]

[tool.uv.workspace]
members = [
    "Object_Detection_Transfer",
]
